@@ -1,9 +1,8 @@
 package com.sjwi.meals.service.security;
 
-import javax.xml.bind.DatatypeConverter;
-
 import com.sjwi.meals.model.AccessTokenResponse;
 
+import org.apache.commons.codec.binary.Base64;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
@@ -16,7 +15,7 @@ public class JwtManager {
   String clientSecret;
 
   public String getUnpackedAccessToken(AccessTokenResponse response) {
-    return Jwts.parser().setSigningKey(DatatypeConverter.parseBase64Binary(clientSecret)).parseClaimsJws(response.getAccess_token()).getBody().toString();
+    return Jwts.parser().setSigningKey(Base64.decodeBase64(clientSecret)).parseClaimsJws(response.getAccess_token()).getBody().toString();
   }
   
 }
